# Big-Data-Cup

./: .gitignore  bdc_xG.ipynb  first_tries.ipynb  hockey_vaep.ipynb  hockey_vaep2.ipynb  hockey_vaep3.ipynb  hockey_vaep_final.ipynb  hockey_vaep_recreated.ipynb  pyproject.toml  zone_entries.ipynb
2021/: hockey_vaep_final.ipynb
2022/: data_import.ipynb  powerplay_structure_index.ipynb  pp_danger_tracking.ipynb  xG_model_v2.ipynb
2022/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
2022/catboost_info/fold-0/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
2022/catboost_info/fold-0/learn/: events.out.tfevents
2022/catboost_info/fold-0/test/: events.out.tfevents
2022/catboost_info/fold-1/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
2022/catboost_info/fold-1/learn/: events.out.tfevents
2022/catboost_info/fold-1/test/: events.out.tfevents
2022/catboost_info/fold-2/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
2022/catboost_info/fold-2/learn/: events.out.tfevents
2022/catboost_info/fold-2/test/: events.out.tfevents
2022/catboost_info/learn/: events.out.tfevents
2022/catboost_info/test/: events.out.tfevents
2022/whkyhac2022/: pres-whkyhac.pptx  ~$pres-whkyhac.pptx
whkyhac2023/: markov_chain_xt.ipynb  voronoi_frames.ipynb  xT_analysis.ipynb
whkyhac2023/data/: xT.csv  xT_against.csv  xT_net.csv
