[tool.poetry]
name = "big-data-cup"
version = "0.1.0"
description = "dependencies for big data cup project"
authors = ["Tim Keller <tim.keller@unibas.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
tqdm = "^4.64.0"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
